# ai-agent-framework

./: .gitignore  README.md  README_CN.md  rebuild-start.sh  start.sh
LLM-Generation/: go.mod  go.sum
LLM-Generation/cmd/server/: main.go
LLM-Generation/configs/: config.yaml
LLM-Generation/internal/api/: router.go
LLM-Generation/internal/api/handler/: handler.go
LLM-Generation/internal/api/middleware/: middleware.go
LLM-Generation/internal/config/: config.go
LLM-Generation/internal/domain/: types.go
LLM-Generation/internal/llm/: provider.go
LLM-Generation/internal/llm/ollama/: ollama.go
LLM-Generation/internal/llm/openai/: openai.go
LLM-Generation/internal/llm/qwen/: qwen.go
LLM-Generation/internal/llm/zhipu/: zhipu.go
LLM-Generation/internal/orchestrator/: orchestrator.go
LLM-Generation/internal/prompt/: prompt.go
Local-LLM/: CMakeLists.txt  README.md
Local-LLM-Pure-Go/: go.mod
Local-LLM-Pure-Go/configs/: config.yaml
Local-LLM-Pure-Go/internal/api/middleware/: middleware.go
Local-LLM-Pure-Go/internal/config/: config.go
Local-LLM-Pure-Go/internal/engine/: engine.go
Local-LLM-Pure-Go/internal/sampler/: sampler.go
Local-LLM-Pure-Go/internal/tokenizer/: template.go
Local-LLM/cmd/server/: main.go
Local-LLM/configs/: config.yaml
Local-LLM/include/: dequantize.h  gguf_parser.h  http_server.h  metal_compute.h  platform.h  tensor.h  tokenizer.h  transformer.h
Local-LLM/internal/api/: router.go
Local-LLM/internal/api/handler/: handler.go
Local-LLM/internal/config/: config.go
Local-LLM/internal/domain/: types.go
Local-LLM/internal/engine/: engine.go
Local-LLM/internal/engine/llamacpp/: llamacpp.go
Local-LLM/internal/engine/native/bpe/: bpe.go
Local-LLM/internal/engine/native/transformer/: transformer.go
Local-LLM/internal/model/: manager.go
Local-LLM/src/: dequantize.cpp  gguf_parser.cpp  http_server.cpp  kernels.metal  main.cpp  metal_compute.mm  platform.cpp  tokenizer.cpp  transformer.cpp
NLU/: go.mod  go.sum
NLU/cmd/server/: main.go
NLU/configs/: config.yaml  domain.yaml
NLU/internal/api/: router.go
NLU/internal/client/: client.go
NLU/internal/config/: config.go  config_test.go
NLU/internal/domain/: types.go
NLU/internal/llm/: factory.go  factory_test.go  provider.go
NLU/internal/pipeline/: pipeline.go
NLU/internal/prompt/: prompt.go  prompt_test.go
RAG/: go.mod  go.sum
RAG/cmd/server/: main.go
RAG/configs/: config.yaml
RAG/internal/api/: router.go
RAG/internal/config/: config.go
RAG/internal/domain/: types.go
RAG/internal/embedding/: provider.go
RAG/internal/loader/: loader.go
RAG/internal/retriever/: retriever.go
RAG/internal/splitter/: splitter.go
RAG/internal/vectorstore/: store.go
postman/: GoInfer.postman_collection.json
(+31 files in other folders)
